--- a/src/UI/Windows/Views/Pages/ManagePage.xaml
+++ b/src/UI/Windows/Views/Pages/ManagePage.xaml
@@ -4,46 +4,64 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:OSDPBench.Windows.Views.Pages"
+      xmlns:converters="clr-namespace:OSDPBench.Windows.Converters"
       mc:Ignorable="d" 
       d:DataContext="{d:DesignInstance local:ManagePage,
 									 IsDesignTimeCreatable=False}"
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ManagePage">
+      Title="Manage">
+    
+    <Page.Resources>
+        <converters:NullToVisibilityConverter x:Key="NullToVisibilityConverter" />
+    </Page.Resources>
 
     <StackPanel 
         Orientation="Vertical"
         Margin="0 5">
-        <TextBlock
-            FontSize="32"
-            Margin="20 10 20 0"
-            HorizontalAlignment="Center"
-            TextAlignment="Center"
-            TextWrapping="Wrap"
-            Text="Device Information"/>
-        <TextBlock
-            FontSize="24"
-            Margin="20 10 20 0"
-            HorizontalAlignment="Center"
-            TextAlignment="Center"
-            TextWrapping="Wrap"
-            Text="{Binding ViewModel.IdentityLookup.VendorName}"
-            d:Text="ABC Corporation"/>
-        <TextBlock
-            FontSize="20"
-            Margin="20 0 20 0"
-            HorizontalAlignment="Center"
-            TextAlignment="Center"
-            TextWrapping="Wrap"
-            Text="{Binding ViewModel.IdentityLookup.Model}"
-            d:Text="Reader"/>
-        <TextBlock
-            FontSize="20"
-            Margin="20 0 20 0"
-            HorizontalAlignment="Center"
-            TextAlignment="Center"
-            TextWrapping="Wrap"
-            Text="{Binding ViewModel.IdentityLookup.VersionNumber}"
-            d:Text="1.2.4"/>
-
+        <StackPanel  Orientation="Vertical"
+                     Visibility="{Binding Path=ViewModel.IdentityLookup, Converter={StaticResource NullToVisibilityConverter}, ConverterParameter=True, Mode=OneWay}">
+            <TextBlock
+                FontSize="32"
+                Margin="20 10 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Foreground="Orange"
+                Text="Device has not been Identified. Goto the Connect to PD page."/>
+        </StackPanel>
+        <StackPanel  Orientation="Vertical"
+                     Visibility="{Binding Path=ViewModel.IdentityLookup, Converter={StaticResource NullToVisibilityConverter}, ConverterParameter=False, Mode=OneWay}">
+            <TextBlock
+                FontSize="32"
+                Margin="20 10 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Text="Device Information"/>
+            <TextBlock
+                FontSize="24"
+                Margin="20 10 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Text="{Binding ViewModel.IdentityLookup.VendorName}"
+                d:Text="ABC Corporation"/>
+            <TextBlock
+                FontSize="20"
+                Margin="20 0 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Text="{Binding ViewModel.IdentityLookup.Model}"
+                d:Text="Reader"/>
+            <TextBlock
+                FontSize="20"
+                Margin="20 0 20 0"
+                HorizontalAlignment="Center"
+                TextAlignment="Center"
+                TextWrapping="Wrap"
+                Text="{Binding ViewModel.IdentityLookup.VersionNumber}"
+                d:Text="1.2.4"/>
+        </StackPanel>
     </StackPanel>
 </Page>
