--- a/src/UI/Windows/Views/Controls/SetCommunicationControl.xaml
+++ b/src/UI/Windows/Views/Controls/SetCommunicationControl.xaml
@@ -3,10 +3,35 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:OSDPBench.Windows.Views.Controls"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+             xmlns:controls="clr-namespace:OSDPBench.Windows.Views.Controls"
+             d:DataContext="{d:DesignInstance Type=controls:SetCommunicationControl}"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
+
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0" Orientation="Vertical">
+            <Label Content="Baud Rate"
+                   Target="{Binding ElementName=BaudRateComboBox}" />
+            <ComboBox Name="BaudRateComboBox"
+                      Margin="0 0 20 0"
+                      ItemsSource="{Binding AvailableBaudRates}"
+                      SelectedItem="{Binding SelectedBaudRate}"/>
+        </StackPanel>
+        <StackPanel Grid.Column="1" Orientation="Vertical">
+            <Label Content="Address"
+                   Target="{Binding ElementName=BaudRateComboBox}" />
+            <ui:NumberBox Name="AddressNumberBox"
+                          Value="{Binding SelectedAddress}"
+                          Margin="0 0 20 0"
+                          Minimum="0"
+                          Maximum="127"
+                          MaxDecimalPlaces="0"/>
+        </StackPanel>
     </Grid>
+
 </UserControl>
