--- a/src/UI/Windows/Views/Pages/ManagePage.xaml
+++ b/src/UI/Windows/Views/Pages/ManagePage.xaml
@@ -79,6 +79,8 @@
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -106,12 +108,30 @@
                             </ui:TextBlock.Text>
                         </ui:TextBlock>
 
-                        <ComboBox Name="ConnectionTypeComboBox"
+                        <ComboBox Name="DeviceActionsComboBox"
                                   Grid.Row="0"
                                   Grid.RowSpan="2"
                                   Grid.Column="1"
                                   Margin="0,0,16,0"
-                                  ItemsSource="{Binding ViewModel.AvailableActions }"/>
+                                  ItemsSource="{Binding ViewModel.AvailableDeviceActions }"
+                                  SelectedItem="{Binding ViewModel.SelectedDeviceAction}"
+                                  DisplayMemberPath="Name"
+                                  SelectionChanged="DeviceActionsComboBox_OnSelectionChanged"/>
+
+                        <Grid Name="DeviceActionControl"
+                              Grid.Row="2"
+                              Grid.Column="0"
+                              Grid.ColumnSpan="2"
+                              Margin="5, 10">
+
+                        </Grid>
+
+                        <ui:Button  Content="Perform Action"
+                                    Grid.Row="3"
+                                    Grid.Column="0"
+                                    Margin="10 5"
+                                    HorizontalAlignment="Left"
+                                    Command="{Binding ViewModel.ExecuteDeviceActionCommand}"/>
                     </Grid>
                 </ui:CardExpander.Header>
             </ui:CardExpander>
