--- a/src/UI/Windows/Views/Controls/MonitorCardReadsControl.xaml
+++ b/src/UI/Windows/Views/Controls/MonitorCardReadsControl.xaml
@@ -7,6 +7,14 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        
+        <Grid>
+            <StackPanel Orientation="Vertical">
+                <Label Content="Card Number"
+                       Target="{Binding ElementName=BaudRateComboBox}" />
+                <TextBox Name="CardNumberTextBox"
+                         IsReadOnly="True"
+                          Margin="0 0 20 0"/>
+            </StackPanel>
+        </Grid>
     </Grid>
 </UserControl>
